[gd_scene load_steps=11 format=3 uid="uid://bfsfbydiqr0gr"]

[ext_resource type="Script" path="res://src/eagle/eagle.gd" id="1_2whi5"]
[ext_resource type="Texture2D" uid="uid://bvjsvy2ponp8o" path="res://assets/gfx/eagle/eagle.png" id="1_6askw"]
[ext_resource type="AudioStream" uid="uid://cqj6yx0c15ugi" path="res://assets/sfx/warning_zero_energy.wav" id="3_7wko3"]
[ext_resource type="AudioStream" uid="uid://bq0eh7xhsd5fb" path="res://assets/sfx/Bird_dive.wav" id="3_e620g"]
[ext_resource type="AudioStream" uid="uid://dv1xva0f43gxd" path="res://assets/sfx/Bird_grad.wav" id="5_3jpf0"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="6_drs0q"]
[ext_resource type="Script" path="res://src/eagle/waiting.gd" id="7_sq710"]
[ext_resource type="Script" path="res://src/eagle/flyby.gd" id="8_bkve8"]
[ext_resource type="Script" path="res://src/eagle/dive.gd" id="9_fx0c1"]
[ext_resource type="Script" path="res://src/eagle/grab.gd" id="10_0bwhh"]

[node name="Eagle" type="Node2D"]
script = ExtResource("1_2whi5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -144)
texture = ExtResource("1_6askw")

[node name="WarningSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7wko3")

[node name="FlyBySfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e620g")

[node name="GrabSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3jpf0")

[node name="xsm" type="Node" parent="."]
script = ExtResource("6_drs0q")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("..")
timed = false
next_state = NodePath("waiting")

[node name="waiting" type="Node" parent="xsm"]
script = ExtResource("7_sq710")
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("")

[node name="flyby" type="Node" parent="xsm"]
script = ExtResource("8_bkve8")
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("")

[node name="dive" type="Node" parent="xsm"]
script = ExtResource("9_fx0c1")

[node name="grab" type="Node" parent="xsm"]
script = ExtResource("10_0bwhh")
